--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,54 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title class="ion-text-center">
+      <img src="assets/logo_pizza.png" alt="App Logo" width="100">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-split-pane contentId="main-content">
+    <ion-menu contentId="main-content">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Categorías</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/pizzas" routerDirection="root">
+              <ion-label>Pizzas</ion-label>
+            </ion-item>
+            <ion-item routerLink="/acompaniamientos" routerDirection="root">
+              <ion-label>Acompañamientos</ion-label>
+            </ion-item>
+            <ion-item routerLink="/postres" routerDirection="root">
+              <ion-label>Postres</ion-label>
+            </ion-item>
+            <ion-item routerLink="/bebidas" routerDirection="root">
+              <ion-label>Bebidas</ion-label>
+            </ion-item>
+            <ion-item routerLink="/extras" routerDirection="root">
+              <ion-label>Extras</ion-label>
+            </ion-item>
+            <ion-item routerLink="/mi-pedido" routerDirection="root">
+              <ion-label>Mi Pedido</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <div class="ion-page" id="main-content">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Bienvenido, {{ userName }}</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <p>Selecciona una categoría del menú para ver los artículos disponibles.</p>
+      </ion-content>
+    </div>
+  </ion-split-pane>
 </ion-content>
